public_html/styles/table_style.css
table, tr, th, td
{
  margin: auto;
	border: 1px solid gray;
  border-collapse: collapse;
}

.tableCaption
{
  color: #14ebff;
  padding-bottom: 10px;
  font-size: 20px;
}

td
{
  height: 1px;
	text-align: center;
}

th
{
    color: #d3d3d3;
    background-color: #565650;
}

tr
{
    color: #d3d3d3;
}

table tr:nth-child(even)
{
    background-color: #6b6b66;
}

table tr:nth-child(odd)
{
    background-color: #565650;
}

table tr:hover
{
	color: #70e2ff;
  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
}

.row_hover
{
  color: #70e2ff;
  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
}

.manouverAssessment
{
  top: 50%;
  transform: translate(-50%, 0);
}

.manouverAssessmentBar
{
  padding-bottom: 0;
}

